# VideoBot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirenments.txt
src/: common.py  reddit_main.py
src/api/: reddit.py  youtube.py
src/audio/back/: back_audio.py
src/audio/tts/: ValidVoices.py  profane_filter.py  tts_wrapper.py
src/reddit/: collect_reddit.py  reddit_collect.py  reddit_main.py  reddit_video.py
src/video/: screenshots.py
src/video/back/: back_video.py  default.py
utils/: .config.template.toml  config.py  console.py
