[tool.poetry]
name = "videobot"
version = "2.0.0"
description = "Bot that makes video creation so simple"
authors = ["Drugsosos <44712637+Drugsosos@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
wheel = "0.37.1"
asyncpraw = "7.5.0"
aiohttp = "3.8.1"
pyppeteer = "1.0.2"
MoviePy = "1.0.3"
rich = "12.4.4"
aiofiles = "0.6.0"
requests = "^2.28.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
